--- a/intro-ts.qmd
+++ b/intro-ts.qmd
@@ -4,7 +4,6 @@
 
 ## Introducción
 
-
 ### Datos de series temporales
 
 - Una muestra de datos de **series temporales** está formada por observaciones de una o más variables **en periodos de tiempo consecutivos**.
@@ -32,22 +31,27 @@
 ### Ejemplo: inflación interanual en España
 
 
-Tasa interanual de inflación calculada a partir del IPC armonizado
-general de España. Fuente: INE.
++------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+
+|      |    Ene   |    Feb   |    Mar   |    Abr   |    May   |    Jun   |    Jul   |    Ago   |    Sep   |    Oct   |    Nov   |    Dic   |
++======+=========:+=========:+=========:+=========:+=========:+=========:+=========:+=========:+=========:+=========:+=========:+=========:+
+| 2016 | $-0{,}4$ | $-1{,}0$ | $-1{,}0$ | $-1{,}2$ | $-1{,}1$ | $-0{,}9$ | $-0{,}7$ | $-0{,}3$ |  $0{,}0$ |  $0{,}5$ |  $0{,}5$ |  $1{,}4$ |
++------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+
+| 2017 |  $2{,}9$ |  $3{,}0$ |  $2{,}1$ |  $2{,}6$ |  $2{,}0$ |  $1{,}6$ |  $1{,}7$ |  $2{,}0$ |  $1{,}8$ |  $1{,}7$ |  $1{,}8$ |  $1{,}2$ |
++------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+
+| 2018 |  $0{,}7$ |  $1{,}2$ |  $1{,}3$ |  $1{,}1$ |  $2{,}1$ |  $2{,}3$ |  $2{,}3$ |  $2{,}2$ |  $2{,}3$ |  $2{,}3$ |  $1{,}7$ |  $1{,}2$ |
++------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+
+| 2019 |  $1{,}0$ |  $1{,}1$ |  $1{,}3$ |  $1{,}6$ |  $0{,}9$ |  $0{,}6$ |  $0{,}6$ |  $0{,}4$ |  $0{,}2$ |  $0{,}2$ |  $0{,}5$ |  $0{,}8$ |
++------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+
+| 2020 |  $1{,}1$ |  $0{,}9$ |  $0{,}1$ | $-0{,}7$ | $-0{,}9$ | $-0{,}3$ | $-0{,}7$ | $-0{,}6$ | $-0{,}6$ | $-0{,}9$ | $-0{,}8$ | $-0{,}6$ |
++------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+
+| 2021 |  $0{,}4$ | $-0{,}1$ |  $1{,}2$ |  $2{,}0$ |  $2{,}4$ |  $2{,}5$ |  $2{,}9$ |  $3{,}3$ |  $4{,}0$ |  $5{,}4$ |  $5{,}5$ |  $6{,}6$ |
++------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+
+| 2022 |  $6{,}2$ |  $7{,}6$ |  $9{,}8$ |  $8{,}3$ |  $8{,}5$ | $10{,}0$ | $10{,}7$ | $10{,}5$ |  $9{,}0$ |  $7{,}3$ |  $6{,}7$ |  $5{,}5$ |
++------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+
+| 2023 |  $5{,}9$ |  $6{,}0$ |          |          |          |          |          |          |          |          |          |          |
++------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+----------+
 
-<+ATTR_LATEX: :font \scriptsize :align @{}l*{12}{@{\hspace{3mm}}>{$}r<{$}}@{} :booktabs t
-|------+------------+------------+------------+------------+------------+------------+------------+------------+------------+------------+------------+------------|
-|      | \text{Ene} | \text{Feb} | \text{Mar} | \text{Abr} | \text{May} | \text{Jun} | \text{Jul} | \text{Ago} | \text{Sep} | \text{Oct} | \text{Nov} | \text{Dic} |
-|------+------------+------------+------------+------------+------------+------------+------------+------------+------------+------------+------------+------------|
-| 2016 |       -0.4 |       -1.0 |       -1.0 |       -1.2 |       -1.1 |       -0.9 |       -0.7 |       -0.3 |        0.0 |        0.5 |        0.5 |        1.4 |
-| 2017 |        2.9 |        3.0 |        2.1 |        2.6 |        2.0 |        1.6 |        1.7 |        2.0 |        1.8 |        1.7 |        1.8 |        1.2 |
-| 2018 |        0.7 |        1.2 |        1.3 |        1.1 |        2.1 |        2.3 |        2.3 |        2.2 |        2.3 |        2.3 |        1.7 |        1.2 |
-| 2019 |        1.0 |        1.1 |        1.3 |        1.6 |        0.9 |        0.6 |        0.6 |        0.4 |        0.2 |        0.2 |        0.5 |        0.8 |
-| 2020 |        1.1 |        0.9 |        0.1 |       -0.7 |       -0.9 |       -0.3 |       -0.7 |       -0.6 |       -0.6 |       -0.9 |       -0.8 |       -0.6 |
-| 2021 |        0.4 |       -0.1 |        1.2 |        2.0 |        2.4 |        2.5 |        2.9 |        3.3 |        4.0 |        5.4 |        5.5 |        6.6 |
-| 2022 |        6.2 |        7.6 |        9.8 |        8.3 |        8.5 |       10.0 |       10.7 |       10.5 |        9.0 |        7.3 |        6.7 |        5.5 |
-| 2023 |        5.9 |        6.0 |            |            |            |            |            |            |            |            |            |            |
-|------+------------+------------+------------+------------+------------+------------+------------+------------+------------+------------+------------+------------|
+: Tasa interanual de inflación calculada a partir del IPC armonizado general de España. Fuente: INE. {#tbl-infl}
 
 
 ### Gráfico de series temporales
@@ -95,18 +99,27 @@ general de España. Fuente: INE.
 La serie anual $Y_t$ contiene los valores del PIB español a precios de
 mercado desde el año 2000 hasta el 2008. Se mide en millones de euros.
 
-<+ATTR_LATEX: :font \footnotesize :align @{}rr*{4}{@{\hspace{8mm}}r}@{} :booktabs t
-|  Año | $t$ | $Y_{t}$       | $Y_{t-1}$     | $Y_{t-2}$     | $Y_{t-3}$    |
-|------+-----+---------------+---------------+---------------+--------------|
-| 2000 |   1 | \num{ 647851} | \text{---}    | \text{---}    | \text{---}   |
-| 2001 |   2 | \num{ 700993} | \num{ 647851} | \text{---}    | \text{---}   |
-| 2002 |   3 | \num{ 749552} | \num{ 700993} | \num{ 647851} | \text{---}   |
-| 2003 |   4 | \num{ 802266} | \num{ 749552} | \num{ 700993} | \num{647851} |
-| 2004 |   5 | \num{ 859437} | \num{ 802266} | \num{ 749552} | \num{700993} |
-| 2005 |   6 | \num{ 927357} | \num{ 859437} | \num{ 802266} | \num{749552} |
-| 2006 |   7 | \num{1003823} | \num{ 927357} | \num{ 859437} | \num{802266} |
-| 2007 |   8 | \num{1075539} | \num{1003823} | \num{ 927357} | \num{859437} |
-| 2008 |   9 | \num{1109541} | \num{1075539} | \num{1003823} | \num{927357} |
++------+-----+-----------------+-----------------+-----------------+-------------+
+|  Año | $t$ | $Y_{t}$         | $Y_{t-1}$       | $Y_{t-2}$       | $Y_{t-3}$   |
++======+====:+================:+================:+================:+============:+
+| 2000 | $1$ | $647{.}851$     | --              | --              | --          |
++------+-----+-----------------+-----------------+-----------------+-------------+
+| 2001 | $2$ | $700{.}993$     | $647{.}851$     | --              | --          |
++------+-----+-----------------+-----------------+-----------------+-------------+
+| 2002 | $3$ | $749{.}552$     | $700{.}993$     | $647{.}851$     | --          |
++------+-----+-----------------+-----------------+-----------------+-------------+
+| 2003 | $4$ | $802{.}266$     | $749{.}552$     | $700{.}993$     | $647{.}851$ |
++------+-----+-----------------+-----------------+-----------------+-------------+
+| 2004 | $5$ | $859{.}437$     | $802{.}266$     | $749{.}552$     | $700{.}993$ |
++------+-----+-----------------+-----------------+-----------------+-------------+
+| 2005 | $6$ | $927{.}357$     | $859{.}437$     | $802{.}266$     | $749{.}552$ |
++------+-----+-----------------+-----------------+-----------------+-------------+
+| 2006 | $7$ | $1{.}003{.}823$ | $927{.}357$     | $859{.}437$     | $802{.}266$ |
++------+-----+-----------------+-----------------+-----------------+-------------+
+| 2007 | $8$ | $1{.}075{.}539$ | $1{.}003{.}823$ | $927{.}357$     | $859{.}437$ |
++------+-----+-----------------+-----------------+-----------------+-------------+
+| 2008 | $9$ | $1{.}109{.}541$ | $1{.}075{.}539$ | $1{.}003{.}823$ | $927{.}357$ |
++------+-----+-----------------+-----------------+-----------------+-------------+
 
 
 ### Diferencias
@@ -125,18 +138,27 @@ mercado desde el año 2000 hasta el 2008. Se mide en millones de euros.
 
 Diferencia y tasa de crecimiento de  $Y_t$.
 
-<+ATTR_LATEX: :font \footnotesize :align @{}rr*{4}{@{\hspace{8mm}}r}@{} :booktabs t
-|  Año | $t$ | $Y_{t}$       | $Y_{t-1}$     | $\incr Y_{t}$ | $gY_{t}$   |
-|------+-----+---------------+---------------+---------------+------------|
-| 2000 |   1 | \num{ 647851} | \text{---}    | \text{---}    | \text{---} |
-| 2001 |   2 | \num{ 700993} | \num{ 647851} | \num{53142}   | \num{8.2}  |
-| 2002 |   3 | \num{ 749552} | \num{ 700993} | \num{48559}   | \num{6.9}  |
-| 2003 |   4 | \num{ 802266} | \num{ 749552} | \num{52714}   | \num{7.0}  |
-| 2004 |   5 | \num{ 859437} | \num{ 802266} | \num{57171}   | \num{7.1}  |
-| 2005 |   6 | \num{ 927357} | \num{ 859437} | \num{67920}   | \num{7.9}  |
-| 2006 |   7 | \num{1003823} | \num{ 927357} | \num{76466}   | \num{8.2}  |
-| 2007 |   8 | \num{1075539} | \num{1003823} | \num{71716}   | \num{7.1}  |
-| 2008 |   9 | \num{1109541} | \num{1075539} | \num{34002}   | \num{3.2}  |
++------+-----+-----------------+-----------------+---------------+----------+
+|  Año | $t$ | $Y_{t}$         | $Y_{t-1}$       | $\incr Y_{t}$ | $gY_{t}$ |
++======+====:+================:+================:+==============:+=========:+
+| 2000 | $1$ | $647{.}851$     | --              | --            | --       |
++------+-----+-----------------+-----------------+---------------+----------+
+| 2001 | $2$ | $700{.}993$     | $647{.}851$     | $53{.}142$    | $8{,}2$  |
++------+-----+-----------------+-----------------+---------------+----------+
+| 2002 | $3$ | $749{.}552$     | $700{.}993$     | $48{.}559$    | $6{,}9$  |
++------+-----+-----------------+-----------------+---------------+----------+
+| 2003 | $4$ | $802{.}266$     | $749{.}552$     | $52{.}714$    | $7{,}0$  |
++------+-----+-----------------+-----------------+---------------+----------+
+| 2004 | $5$ | $859{.}437$     | $802{.}266$     | $57{.}171$    | $7{,}1$  |
++------+-----+-----------------+-----------------+---------------+----------+
+| 2005 | $6$ | $927{.}357$     | $859{.}437$     | $67{.}920$    | $7{,}9$  |
++------+-----+-----------------+-----------------+---------------+----------+
+| 2006 | $7$ | $1{.}003{.}823$ | $927{.}357$     | $76{.}466$    | $8{,}2$  |
++------+-----+-----------------+-----------------+---------------+----------+
+| 2007 | $8$ | $1{.}075{.}539$ | $1{.}003{.}823$ | $71{.}716$    | $7{,}1$  |
++------+-----+-----------------+-----------------+---------------+----------+
+| 2008 | $9$ | $1{.}109{.}541$ | $1{.}075{.}539$ | $34{.}002$    | $3{,}2$  |
++------+-----+-----------------+-----------------+---------------+----------+
 
 
 ### Logaritmos y tasas de crecimiento
@@ -156,18 +178,28 @@ Diferencia y tasa de crecimiento de  $Y_t$.
 No hay grandes diferencias entre las diferentes formas de calcular las
 tasas de crecimiento.
 
-<+ATTR_LATEX: :font \footnotesize :align @{}rr**{2}{@{\hspace{15mm}}r@{\hspace{2mm}}r}@{} :booktabs t
-|  Año | $t$ | $Y_{t}$       | $100 \incr Y_{t} / Y_{t-1}$ | $\log(Y_{t})$ | $100 \incr \log(Y_{t})$ |
-|------+-----+---------------+-----------------------------+---------------+-------------------------|
-| 2000 |   1 | \num{ 647851} | \text{---}                  | \num{13.38}   | \text{---}              |
-| 2001 |   2 | \num{ 700993} | \num{8.2}                   | \num{13.46}   | \num{7.9}               |
-| 2002 |   3 | \num{ 749552} | \num{6.9}                   | \num{13.53}   | \num{6.7}               |
-| 2003 |   4 | \num{ 802266} | \num{7.0}                   | \num{13.60}   | \num{6.8}               |
-| 2004 |   5 | \num{ 859437} | \num{7.1}                   | \num{13.66}   | \num{6.9}               |
-| 2005 |   6 | \num{ 927357} | \num{7.9}                   | \num{13.74}   | \num{7.6}               |
-| 2006 |   7 | \num{1003823} | \num{8.2}                   | \num{13.82}   | \num{7.9}               |
-| 2007 |   8 | \num{1075539} | \num{7.1}                   | \num{13.89}   | \num{6.9}               |
-| 2008 |   9 | \num{1109541} | \num{3.2}                   | \num{13.92}   | \num{3.1}               |
+
++------+-----+-----------------+-----------------------------+---------------+-------------------------+
+|  Año | $t$ | $Y_{t}$         | $100 \incr Y_{t} / Y_{t-1}$ | $\log(Y_{t})$ | $100 \incr \log(Y_{t})$ |
++======+====:+================:+============================:+==============:+========================:+
+| 2000 | $1$ | $647{.}851$     | --                          | $13{,}38$     | --                      |
++------+-----+-----------------+-----------------------------+---------------+-------------------------+
+| 2001 | $2$ | $700{.}993$     | $8{,}2$                     | $13{,}46$     | $7{,}9$                 |
++------+-----+-----------------+-----------------------------+---------------+-------------------------+
+| 2002 | $3$ | $749{.}552$     | $6{,}9$                     | $13{,}53$     | $6{,}7$                 |
++------+-----+-----------------+-----------------------------+---------------+-------------------------+
+| 2003 | $4$ | $802{.}266$     | $7{,}0$                     | $13{,}60$     | $6{,}8$                 |
++------+-----+-----------------+-----------------------------+---------------+-------------------------+
+| 2004 | $5$ | $859{.}437$     | $7{,}1$                     | $13{,}66$     | $6{,}9$                 |
++------+-----+-----------------+-----------------------------+---------------+-------------------------+
+| 2005 | $6$ | $927{.}357$     | $7{,}9$                     | $13{,}74$     | $7{,}6$                 |
++------+-----+-----------------+-----------------------------+---------------+-------------------------+
+| 2006 | $7$ | $1{.}003{.}823$ | $8{,}2$                     | $13{,}82$     | $7{,}9$                 |
++------+-----+-----------------+-----------------------------+---------------+-------------------------+
+| 2007 | $8$ | $1{.}075{.}539$ | $7{,}1$                     | $13{,}89$     | $6{,}9$                 |
++------+-----+-----------------+-----------------------------+---------------+-------------------------+
+| 2008 | $9$ | $1{.}109{.}541$ | $3{,}2$                     | $13{,}92$     | $3{,}1$                 |
++------+-----+-----------------+-----------------------------+---------------+-------------------------+
 
 
 ### Procesos estocásticos
